# hdmi_sound_control

./: README.md  configure.ac
utils/: Makefile.am
utils/cec-audio/: .gitignore  Makefile.am  cec-audio.1.in  cec-audio.cpp  cec-processing.cpp  cec-tuner.cpp
v4l-utils-po/: de.po
